cli: Added `grendel discover lldp` command ui: Added LLDP tab to nodes tagged "switch" ui: added url search params to pages with tabs to keep tab state on navigation ui: fixed rack page select all checkbox ui: improved UI/UX ui: upgraded packages
